--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,37 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
-  "description": "This extension shows a Google Image search result for the current page",
+  "name": "Marker Upper",
+  "description": "This extension with allow you to mark up any website in your browser. Making reading, learning and focussing on content easier",
   "version": "1.0",
-
+  "background": { "scripts": ["background.js", "right-click.js"] },
   "browser_action": {
     "default_icon": "icon.svg",
-    "default_popup": "index.html"
+    "default_title": "Marker Upper"
   },
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "https://*/",
+    "*://*/*",
+    "http://*/",
+    "https://ajax.googleapis.com/",
+    "<all_urls>",
+    "tts",
+    "background",
+    "tabs"
   ],
 
   "content_scripts": [
   {
     "matches": ["<all_urls>"],
+    "css": ["style.css"],
+
+    "all_frames": true,
     "js": ["right-click.js"]
+
   }
-]
+],
+"web_accessible_resources": [
+    "style.css"
+  ]
 }
