--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "version": "1.0",
   "background": { "scripts": ["background.js", "right-click.js"] },
   "browser_action": {
-    "default_icon": "icon.svg",
+    "default_icon": "icon.png",
+    "default_popup": "popup.html",
     "default_title": "Marker Upper"
   },
   "permissions": [
@@ -14,21 +15,21 @@
     "https://*/",
     "*://*/*",
     "http://*/",
+
     "https://ajax.googleapis.com/",
     "<all_urls>",
     "tts",
     "background",
-    "tabs"
+    "tabs",
+    "storage"
   ],
 
   "content_scripts": [
   {
     "matches": ["<all_urls>"],
     "css": ["style.css"],
-
-    "all_frames": true,
-    "js": ["right-click.js"]
-
+    "js": ["right-click.js"],
+    "all_frames": true
   }
 ],
 "web_accessible_resources": [
